[gd_scene load_steps=9 format=2]

[ext_resource path="res://TestUtilities/AxisArrows.tscn" type="PackedScene" id=1]
[ext_resource path="res://TestUtilities/TrackOutputInterpretationTest.gd" type="Script" id=2]


[sub_resource type="SphereMesh" id=1]
radius = 0.1
height = 0.2

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.101961, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=6]

[sub_resource type="SphereMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
albedo_color = Color( 0.996078, 0, 0, 0.317647 )

[node name="TrackOutputInterpretationTest" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 2 )
discrete_input = false
clamped_input = true

[node name="WebcamDummy" parent="." instance=ExtResource( 1 )]
script = null

[node name="XDummy" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="YDummy" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="ComboDummy" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 6 )

[node name="DistanceSphere" type="MeshInstance" parent="."]
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, -3.535 )
projection = 1
size = 5.0
